--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -16077,3 +16077,656 @@ section.lazy-placeholder:after {
 .cid-s5oQ5dTL1N .media-container-row .row-copirayt p {
   width: 100%;
 }
+.cid-rOYcTy2LbV .navbar {
+  padding: .5rem 0;
+  background: #131313;
+  transition: none;
+  min-height: 77px;
+}
+.cid-rOYcTy2LbV .navbar-dropdown.bg-color.transparent.opened {
+  background: #131313;
+}
+.cid-rOYcTy2LbV a {
+  font-style: normal;
+}
+.cid-rOYcTy2LbV .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-rOYcTy2LbV .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-rOYcTy2LbV .nav-item:focus,
+.cid-rOYcTy2LbV .nav-link:focus {
+  outline: none;
+}
+.cid-rOYcTy2LbV .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rOYcTy2LbV .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-rOYcTy2LbV .menu-logo {
+  margin-right: auto;
+}
+.cid-rOYcTy2LbV .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-rOYcTy2LbV .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-rOYcTy2LbV .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-rOYcTy2LbV .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-rOYcTy2LbV .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-rOYcTy2LbV .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-rOYcTy2LbV .menu-logo .navbar-brand .navbar-logo a {
+  display: inline-flex;
+}
+.cid-rOYcTy2LbV .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-rOYcTy2LbV .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-rOYcTy2LbV .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-rOYcTy2LbV .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-rOYcTy2LbV .dropdown .dropdown-menu {
+  background: #131313;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-rOYcTy2LbV .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-rOYcTy2LbV .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-rOYcTy2LbV .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-rOYcTy2LbV .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-rOYcTy2LbV .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-rOYcTy2LbV .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-rOYcTy2LbV .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-rOYcTy2LbV .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-rOYcTy2LbV .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-rOYcTy2LbV .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-rOYcTy2LbV .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-rOYcTy2LbV button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-rOYcTy2LbV button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-rOYcTy2LbV button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-rOYcTy2LbV button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-rOYcTy2LbV button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rOYcTy2LbV button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rOYcTy2LbV button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-rOYcTy2LbV nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rOYcTy2LbV nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-rOYcTy2LbV nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-rOYcTy2LbV nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rOYcTy2LbV .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rOYcTy2LbV .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-rOYcTy2LbV .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-rOYcTy2LbV .collapsed .navbar-collapse.collapsing,
+.cid-rOYcTy2LbV .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-rOYcTy2LbV .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-rOYcTy2LbV .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-rOYcTy2LbV .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-rOYcTy2LbV .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-rOYcTy2LbV .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-rOYcTy2LbV .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
+.cid-rOYcTy2LbV .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-rOYcTy2LbV .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-rOYcTy2LbV .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-rOYcTy2LbV .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .cid-rOYcTy2LbV .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 5.9rem);
+  }
+}
+.cid-rOYcTy2LbV .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-rOYcTy2LbV .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-rOYcTy2LbV .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rOYcTy2LbV .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  overflow: hidden;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-rOYcTy2LbV .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-rOYcTy2LbV .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-rOYcTy2LbV .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 1023px) {
+  .cid-rOYcTy2LbV .navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rOYcTy2LbV img {
+    height: 3.8rem !important;
+  }
+  .cid-rOYcTy2LbV .btn {
+    display: -webkit-flex;
+  }
+  .cid-rOYcTy2LbV button.navbar-toggler {
+    display: block;
+  }
+  .cid-rOYcTy2LbV .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-rOYcTy2LbV .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rOYcTy2LbV .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-rOYcTy2LbV .navbar-collapse.collapsing,
+  .cid-rOYcTy2LbV .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-rOYcTy2LbV .navbar-collapse.collapsing .navbar-nav,
+  .cid-rOYcTy2LbV .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-rOYcTy2LbV .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-rOYcTy2LbV .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-rOYcTy2LbV .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-rOYcTy2LbV .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rOYcTy2LbV .navbar-collapse.collapsing .navbar-buttons,
+  .cid-rOYcTy2LbV .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-rOYcTy2LbV .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-rOYcTy2LbV .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rOYcTy2LbV .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    overflow: hidden;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-rOYcTy2LbV .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-rOYcTy2LbV .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-rOYcTy2LbV .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-rOYcTy2LbV .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-rOYcTy2LbV .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-rOYcTy2LbV .nav-link:hover,
+.cid-rOYcTy2LbV .dropdown-item:hover {
+  color: #c1c1c1 !important;
+}
+.cid-scaxZHeVtD {
+  background: #ffffff;
+}
+.cid-scaxZHeVtD .video-block {
+  margin: auto;
+  width: 100% !important;
+}
+@media (max-width: 768px) {
+  .cid-scaxZHeVtD .video-block {
+    width: 100% !important;
+  }
+}
+.cid-scaAPBfDZT {
+  padding-top: 30px;
+  padding-bottom: 90px;
+  background-color: #131313;
+}
+.cid-scaAPBfDZT .mbr-section-subtitle {
+  color: #cccccc;
+  font-weight: 300;
+}
+.cid-scaAPBfDZT .mbr-content-text {
+  color: #cccccc;
+}
+.cid-scaAPBfDZT .card {
+  word-wrap: break-word;
+  flex-shrink: 0;
+  -webkit-flex-shrink: 0;
+}
+.cid-scaAPBfDZT .mbr-iconfont {
+  font-size: 80px;
+  color: #149dcc;
+}
+.cid-scaAPBfDZT .cards-container {
+  display: flex;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: center;
+  justify-content: center;
+  word-break: break-word;
+}
+.cid-scaAPBfDZT .media-block {
+  flex-shrink: 0;
+  -webkit-flex-shrink: 0;
+}
+@media (min-width: 992px) {
+  .cid-scaAPBfDZT .media-block {
+    padding-right: 2rem;
+  }
+}
+.cid-scaAPBfDZT .cards-block {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-scaAPBfDZT .card-img {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+@media (max-width: 991px) {
+  .cid-scaAPBfDZT .media-block {
+    flex-basis: 100%;
+    -webkit-flex-basis: 100%;
+    padding-left: 0;
+    padding-bottom: 2rem;
+  }
+}
+.cid-scaAPBfDZT .mbr-section-title {
+  color: #ff3366;
+}
+.cid-scaAPBfDZT H4 {
+  color: #ffffff;
+}
+.cid-scaKh7Ge5t .number-wrap {
+  color: #ffffff;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-scaKh7Ge5t .number {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  text-transform: none;
+  letter-spacing: -2px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #ffffff;
+}
+.cid-scaKh7Ge5t .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-scaKh7Ge5t .dot {
+  position: absolute;
+  top: -10px;
+  right: -0.8em;
+  width: 1em;
+  display: block;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #ffffff;
+}
+.cid-scaKh7Ge5t .countdown-cont {
+  margin: 0 auto;
+}
+.cid-scaKh7Ge5t .full-count-container {
+  background: #131313;
+}
+@media (min-width: 992px) and (max-width: 1200px) {
+  .cid-scaKh7Ge5t .dot {
+    right: -0.6em;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .cid-scaKh7Ge5t .dot {
+    right: -1em;
+  }
+}
+@media (max-width: 768px) {
+  .cid-scaKh7Ge5t .dot {
+    display: none;
+  }
+  .cid-scaKh7Ge5t .number {
+    white-space: nowrap;
+  }
+}
+@media (max-width: 550px) {
+  .cid-scaKh7Ge5t .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-scaKh7Ge5t .number {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-scaKh7Ge5t .period {
+    font-size: 0.8rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-scaKh7Ge5t .number {
+    font-size: 25px;
+  }
+  .cid-scaKh7Ge5t .period {
+    font-size: 0.7rem;
+  }
+}
+.cid-rPJyv7S1OG {
+  padding-top: 15px;
+  padding-bottom: 45px;
+  background-color: #131313;
+}
+.cid-rPJyv7S1OG .row-links {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rPJyv7S1OG .social-row {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rPJyv7S1OG .media-container-row {
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-rPJyv7S1OG .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-rPJyv7S1OG .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-rPJyv7S1OG .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-rPJyv7S1OG .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+.cid-rPJyv7S1OG .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-rPJyv7S1OG .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-rPJyv7S1OG .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-rPJyv7S1OG .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-rPJyv7S1OG .media-container-row .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-rPJyv7S1OG .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-rPJyv7S1OG .media-container-row .row-copirayt p {
+  width: 100%;
+}
