--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Lobster:400&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Bebas+Neue:400&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Righteous:400&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i&display=swap);
@@ -12,12 +12,12 @@ body {
   font-family: Rubik;
 }
 .display-1 {
-  font-family: 'Lobster', display;
-  font-size: 3.8rem;
+  font-family: 'Bebas Neue', display;
+  font-size: 4.8rem;
   font-display: swap;
 }
 .display-1 > .mbr-iconfont {
-  font-size: 6.08rem;
+  font-size: 7.68rem;
 }
 .display-2 {
   font-family: 'Righteous', display;
@@ -58,9 +58,9 @@ body {
 /* 0.65 - min scale variable, may vary */
 @media (max-width: 768px) {
   .display-1 {
-    font-size: 3.04rem;
-    font-size: calc( 1.98rem + (3.8 - 1.98) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.98rem + (3.8 - 1.98) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 3.84rem;
+    font-size: calc( 2.33rem + (4.8 - 2.33) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (2.33rem + (4.8 - 2.33) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
     font-size: 1.2rem;
@@ -19131,4 +19131,611 @@ section.lazy-placeholder:after {
 }
 .cid-t4e6GI9K7v .mbr-section-title span {
   color: #ffbc00;
+}
+.cid-rOYcTy2LbV .navbar {
+  padding: .5rem 0;
+  background: #131313;
+  transition: none;
+  min-height: 77px;
+}
+.cid-rOYcTy2LbV .navbar-dropdown.bg-color.transparent.opened {
+  background: #131313;
+}
+.cid-rOYcTy2LbV a {
+  font-style: normal;
+}
+.cid-rOYcTy2LbV .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-rOYcTy2LbV .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-rOYcTy2LbV .nav-item:focus,
+.cid-rOYcTy2LbV .nav-link:focus {
+  outline: none;
+}
+.cid-rOYcTy2LbV .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rOYcTy2LbV .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-rOYcTy2LbV .menu-logo {
+  margin-right: auto;
+}
+.cid-rOYcTy2LbV .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-rOYcTy2LbV .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-rOYcTy2LbV .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-rOYcTy2LbV .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-rOYcTy2LbV .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-rOYcTy2LbV .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-rOYcTy2LbV .menu-logo .navbar-brand .navbar-logo a {
+  display: inline-flex;
+}
+.cid-rOYcTy2LbV .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-rOYcTy2LbV .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-rOYcTy2LbV .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-rOYcTy2LbV .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-rOYcTy2LbV .dropdown .dropdown-menu {
+  background: #131313;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-rOYcTy2LbV .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-rOYcTy2LbV .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-rOYcTy2LbV .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-rOYcTy2LbV .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-rOYcTy2LbV .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-rOYcTy2LbV .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-rOYcTy2LbV .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-rOYcTy2LbV .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-rOYcTy2LbV .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-rOYcTy2LbV .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-rOYcTy2LbV .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-rOYcTy2LbV button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-rOYcTy2LbV button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-rOYcTy2LbV button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-rOYcTy2LbV button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-rOYcTy2LbV button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rOYcTy2LbV button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rOYcTy2LbV button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-rOYcTy2LbV nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rOYcTy2LbV nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-rOYcTy2LbV nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-rOYcTy2LbV nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rOYcTy2LbV .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rOYcTy2LbV .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-rOYcTy2LbV .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-rOYcTy2LbV .collapsed .navbar-collapse.collapsing,
+.cid-rOYcTy2LbV .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-rOYcTy2LbV .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-rOYcTy2LbV .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-rOYcTy2LbV .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-rOYcTy2LbV .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-rOYcTy2LbV .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-rOYcTy2LbV .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
+.cid-rOYcTy2LbV .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-rOYcTy2LbV .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-rOYcTy2LbV .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-rOYcTy2LbV .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .cid-rOYcTy2LbV .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 4.9rem);
+  }
+}
+.cid-rOYcTy2LbV .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-rOYcTy2LbV .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-rOYcTy2LbV .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rOYcTy2LbV .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  overflow: hidden;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-rOYcTy2LbV .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-rOYcTy2LbV .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-rOYcTy2LbV .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 1023px) {
+  .cid-rOYcTy2LbV .navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rOYcTy2LbV img {
+    height: 3.8rem !important;
+  }
+  .cid-rOYcTy2LbV .btn {
+    display: -webkit-flex;
+  }
+  .cid-rOYcTy2LbV button.navbar-toggler {
+    display: block;
+  }
+  .cid-rOYcTy2LbV .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-rOYcTy2LbV .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rOYcTy2LbV .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-rOYcTy2LbV .navbar-collapse.collapsing,
+  .cid-rOYcTy2LbV .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-rOYcTy2LbV .navbar-collapse.collapsing .navbar-nav,
+  .cid-rOYcTy2LbV .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-rOYcTy2LbV .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-rOYcTy2LbV .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-rOYcTy2LbV .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-rOYcTy2LbV .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rOYcTy2LbV .navbar-collapse.collapsing .navbar-buttons,
+  .cid-rOYcTy2LbV .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-rOYcTy2LbV .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-rOYcTy2LbV .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rOYcTy2LbV .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    overflow: hidden;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-rOYcTy2LbV .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-rOYcTy2LbV .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-rOYcTy2LbV .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-rOYcTy2LbV .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-rOYcTy2LbV .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-rOYcTy2LbV .nav-link:hover,
+.cid-rOYcTy2LbV .dropdown-item:hover {
+  color: #c1c1c1 !important;
+}
+.cid-tbWepKQWWp {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/lady-18.jpg");
+}
+.cid-tbWepKQWWp .mbr-figure {
+  margin: 0 auto;
+  width: 100%;
+  display: -webkit-flex;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-tbWepKQWWp .mbr-figure img {
+  height: 100%;
+  margin: 0 auto;
+}
+@media (max-width: 991px) {
+  .cid-tbWepKQWWp .mbr-figure img {
+    width: 100% !important;
+  }
+}
+.cid-tbX84BZ2nv {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #232323;
+}
+.cid-tbX84BZ2nv .mbr-section-subtitle {
+  color: #ffffff;
+  font-weight: 300;
+}
+.cid-tbX84BZ2nv .number-wrap {
+  color: #c1c1c1;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-tbX84BZ2nv .number {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  text-transform: none;
+  letter-spacing: -2px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #cccccc;
+}
+.cid-tbX84BZ2nv .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-tbX84BZ2nv .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #cccccc;
+}
+.cid-tbX84BZ2nv .countdown-cont {
+  max-width: 700px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-tbX84BZ2nv .dot {
+    display: none;
+  }
+}
+@media (max-width: 543px) {
+  .cid-tbX84BZ2nv .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-tbX84BZ2nv .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+    max-width: 25%;
+    flex: 0 0 25%;
+  }
+  .cid-tbX84BZ2nv .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-tbX84BZ2nv .number,
+  .cid-tbX84BZ2nv .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-tbX84BZ2nv .period {
+    font-size: 0.8rem;
+  }
+}
+.cid-tbX84BZ2nv H2 {
+  color: #ffffff;
+}
+#custom-html-fe {
+  background-color: #232323;
+}
+.cid-tbWRBaGUrO {
+  background-image: url("../../../assets/images/albumart-tardedemais.jpg");
+}
+.cid-tbWRBaGUrO .media-container-row {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+@media (min-width: 992px) {
+  .cid-tbWRBaGUrO .mbr-figure {
+    padding-right: 4rem;
+    padding-right: 0;
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tbWRBaGUrO .mbr-figure {
+    padding-bottom: 3rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-tbWRBaGUrO .mbr-text {
+    text-align: center;
+  }
+}
+.cid-tbWRBaGUrO .mbr-text,
+.cid-tbWRBaGUrO .mbr-section-btn {
+  color: #cccccc;
+}
+.cid-tbWT6GH668 {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/img-2472.jpeg");
+}
+.cid-tbWT6GH668 .media-container-row {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+@media (min-width: 992px) {
+  .cid-tbWT6GH668 .mbr-figure {
+    padding-right: 4rem;
+    padding-right: 0;
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tbWT6GH668 .mbr-figure {
+    padding-bottom: 3rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-tbWT6GH668 .mbr-text {
+    text-align: center;
+  }
+}
+.cid-tbWT6GH668 .mbr-text,
+.cid-tbWT6GH668 .mbr-section-btn {
+  color: #cccccc;
+}
+.cid-tbX5vUfw85 {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/lady-newton-30-de-37.jpeg");
+}
+.cid-tbX5vUfw85 .media-container-row {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+@media (min-width: 992px) {
+  .cid-tbX5vUfw85 .mbr-figure {
+    padding-right: 4rem;
+    padding-right: 0;
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tbX5vUfw85 .mbr-figure {
+    padding-bottom: 3rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-tbX5vUfw85 .mbr-text {
+    text-align: center;
+  }
 }
